# FairMOT-with-cpp-tracker

./: LICENSE  README.md  requirements.txt
experiments/: all_yolov5s.sh  crowdhuman_dla34.sh  mix_dla34.sh  mix_ft_ch_dla34.sh  mix_mot17_half_dla34.sh  mix_mot17_half_hrnet18.sh  mix_mot17_half_res34.sh  mix_mot17_half_res34fpn.sh  mix_mot17_half_res50.sh  mix_mot17_half_yolov5s.sh  mot15_ft_mix_dla34.sh  mot17_dla34.sh  mot17_half_dla34.sh  mot17_half_yolov5s.sh  mot20_ft_mix_dla34.sh
src/: demo.py  detect.py  detection_demo.py  gen_data_path.py  gen_labels_15.py  gen_labels_16.py  gen_labels_17.py  gen_labels_20.py  gen_labels_crowd_det.py  gen_labels_crowd_id.py  model_vis.py  test_det.py  test_emb.py  track.py  track_half.py  train.py
src/data/: caltech.10k.val  caltech.all  caltech.train  caltech.val  crowdhuman.train  crowdhuman.val  mot15.train  mot16.train  mot17.emb  mot17.half  mot17.val  mot20.train
src/lib/: opts.py
src/lib/cfg/: crowdhuman.json  data.json  data_all.json  data_half.json  mot15.json  mot16.json  mot17.json  mot17_half.json  mot20.json
src/lib/datasets/: dataset_factory.py
src/lib/models/: common.py  decode.py  losses.py  model.py  yolo.py
src/lib/tracker/: matching.py  multitracker.py
src/test/: kalman_filter_test.py  t.py
tracklet/: CMakeLists.txt  cmake_setup.py  cmake_setup.sh  main.cpp  readme.md  setup.py
tracklet/src/: KalmanFilter.cpp  KalmanFilter.h  Ndarray.cpp  Ndarray.h  basetrack.cpp  basetrack.h  cpp_extension.cpp  cpp_extension.h
tracklet/test/: import_helper.py  import_test.py  kalman_filter_test.py  t.py
(+23 files in other folders)
